--- a/.github/workflows/connect.yml
+++ b/.github/workflows/connect.yml
@@ -13,7 +13,7 @@ jobs:
     name: build                        # Name of the job
     strategy:
       matrix:
-        os: [ubuntu-latest] #[ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         python-version: ['3.8', '3.9', '3.10']
     runs-on: ${{ matrix.os }}             # Operating system for the job
     steps:
