--- a/.github/workflows/connect.yml
+++ b/.github/workflows/connect.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.10']
     runs-on: ${{ matrix.os }}             # Operating system for the job
     steps:
       - name: Checkout                 # Step to checkout the repository
