--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,11 @@ mkdocs_section_index
 mkdocs_literate_nav
 mkdocs-material
 mkdocs-gallery
+pillow
+pynapple
+h5py
+jax
+jaxopt
+matplotlib
+dandi
+git+https://github.com/flatironinstitute/nemos.git
