--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,11 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
+  jobs:
+    pre_build:
+      # reduce interval tqdm updates, so rendered output less messy, see
+      # https://github.com/tqdm/tqdm/pull/1491
+      export TQDM_MININTERVAL=5
 
 mkdocs:
   configuration: mkdocs.yml
