--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,11 +10,14 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
-  jobs:
-    pre_build:
-      # reduce interval tqdm updates, so rendered output less messy, see
-      # https://github.com/tqdm/tqdm/pull/1491
-      - export TQDM_MININTERVAL=5
+
+# In order to reduce interval tqdm updates (so that rendered output is less
+# messy), I have set a custom environment variable in readthedocs,
+# `TQDM_MININTERVAL=5`. I'd prefer to set the environment variable in this file,
+# but cannot figure out how to do so. see https://github.com/tqdm/tqdm/pull/1491
+# for details on the tqdm env variable and
+# https://docs.readthedocs.io/en/stable/environment-variables.html for
+# readthedocs env variables
 
 mkdocs:
   configuration: mkdocs.yml
