--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -3,6 +3,8 @@ channels:
   - conda-forge
 dependencies:
   - ffmpeg
+  - pip
+  - python=3.10
   - pip:
       - pip install --upgrade "jax[cuda12_pip]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
       - git+https://github.com/flatironinstitute/nemos-workshop-feb-2024.git
