--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,7 +15,7 @@ build:
     pre_build:
       - python scripts/strip_text.py
       # download data first, so we don't have a race for each notebook
-      - python docs/utils/data.py
+      - python src/workshop_utils/data.py
   apt_packages:
     - ffmpeg
 
@@ -33,4 +33,5 @@ mkdocs:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: requirements.txt
+   - method: pip
+     path: .
