--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     'pytest',
     'click',
     'ipython',
+    'scikit-learn',
 ]
 
 # Configure package discovery for setuptools
