--- a/binder/environment-cuda.yml
+++ b/binder/environment-cuda.yml
@@ -7,4 +7,4 @@ dependencies:
   - jaxlib=*=*cuda*
   - cuda-nvcc
   - pip:
-      - git+https://github.com/flatironinstitute/nemos-workshop-feb-2024.git@binder
+      - git+https://github.com/flatironinstitute/nemos-workshop-feb-2024.git
